--- a/index.html
+++ b/index.html
@@ -1,1 +1,991 @@
+<!DOCTYPE html>
+<html>
+<body>
+ 
+<head>
+   <script src="functions.js"></script> 
+<link rel="stylesheet" href="style.css">
+ </head>
 
+<div id="NotAllowedme"> 
+
+ <div id="main"> 
+ 
+ <div id="content-1"> 
+ 
+ <div id="content-2"> 
+ 
+ <div id="content-3"> 
+ 
+ <div id="content-4"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="container"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="menu"> 
+ <a class="btn-menu" href="#content-1">𝓒𝓐𝓢𝓐</a> 
+ <a class="btn-menu" href="#content-2">𝓕𝓡𝓘𝓔𝓝𝓓𝓢</a> 
+ <a class="btn-menu" href="#content-3">𝓜𝓘 𝓐𝓜𝓞𝓡</a> </div> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="main-content"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="header"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <h3 class="title">❣𝓒𝓣𝓩❣</h3> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <h2 class="sub-title">𝓜𝓪𝓻𝓲𝓪𝓷 </h2> 
+ </div> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="main-page"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="pages"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="home"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="block"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <h2 class="welcome">Bienvenidos a mi space!</h2> 
+ <img src="https://u.cubeupload.com/BleizArtz2/d75firma.gif" style="float:none;NotAllowed0px;" /> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <p class="desc"><br /> 
+ 
+ </p> 
+ </div> 
+ </div> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="friend"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="block"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="col-img"> 
+ <img src="http://u.cubeupload.com/marian38/yooooo.jpg" style="float:none;NotAllowed0px;" /> 
+ </div> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="aside"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <h2>My Lσνεѕ</h2> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="col-friend"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="row-friend"> 
+ <img src="http://u.cubeupload.com/marian38/fa73542e43b6bd78db28.jpg" style="float:none;NotAllowed0px;" /> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="infor"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <h4>♥𝓒𝓣𝓩♥</h4> 
+—★—<a class="me" href="http://xat.me/iCtz">𝑀𝒾 𝒜𝓂𝑜𝓇</a> </div> 
+ </div> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="row-friend"> 
+ <img src="http://u.cubeupload.com/marian38/amiga.png" style="float:none;NotAllowed0px;" /> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="infor"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <h4>𝐹𝒜𝑅𝑅𝒰𝒞𝒜</h4> 
+ —★—<a class="me" href="http://xat.me/reinacaLi34">𝒜𝓂𝑜𝓇𝑒</a> </div> 
+ </div> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="row-friend"> 
+ <img src="http://u.cubeupload.com/marian38/amiga.png" style="float:none;NotAllowed0px;" /> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="infor"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <h4>𝐻𝐸𝒞𝐻𝐼𝒞𝐸𝑅𝒜</h4> 
+ —★—<a class="me" href="http://xat.me/mirameyteechizo1">𝑀𝒶𝓂𝒾</a> </div> 
+ </div> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="row-friend"> 
+ <img src="http://u.cubeupload.com/marian38/amiga.png" style="float:none;NotAllowed0px;" /> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="infor"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <h4>𝐵𝐸𝐿𝐸𝒩</h4> 
+ —★—<a class="me" href="http://xat.me/belenfantastica">ℳ𝒶𝓃𝒶</a> </div> 
+ </div> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="row-friend"> 
+ <img src="http://u.cubeupload.com/marian38/amiga.png" style="float:none;NotAllowed0px;" /> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="infor"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <h4>Yoli</h4> 
+ —★— <a class="me" href="http://xat.me/aLegriaaaa15">ℳ𝒶𝓃𝒶</a></div> 
+ </div> 
+ </div> 
+ </div> 
+ </div> 
+ </div> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="video"> 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="block"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+<div class="col-img"> 
+ <img src="http://u.cubeupload.com/marian38/b56Screenshot3.png" style="float:none;NotAllowed0px;" /> 
+ </div> 
+ 
+ 
+ <h4>♥𝑷𝒓𝒆𝒇𝒊𝒆𝒓𝒐 𝒎𝒐𝒓𝒊𝒓 𝒖𝒏 𝒅𝒊́𝒂 𝒂𝒏𝒕𝒆𝒔 𝒒 𝒕𝒖́,𝒑𝒂𝒓𝒂 𝒏𝒐 𝒗𝒊𝒗𝒊𝒓 𝒖𝒏 𝒔𝒐𝒍𝒐 𝒅𝒊́𝒂 𝒔𝒊𝒏 𝒕𝒊♥</h4> <a class="me" href="http://xat.me/">𝑪𝑻𝒁 𝑻𝑬𝑨𝑴𝑶</a> </div> 
+ </div> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="chat"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="block"> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ <div class="box-chat"> 
+ 
+ 
+ </div> 
+ </div> 
+ </div> 
+ </div> 
+ </div> 
+ </div> 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ <div class="footer"><span style="color:rgb(255,255,255);">𝑻𝒆 𝑨𝒎𝒐 𝑪𝒕𝒛 ♡
+<br /> 
+ 
+ </span></div> 
+ </div> 
+ </div> 
+ </div> 
+ </div> 
+ </div> </div></div>
+ </span></div><span style="text-align:center;color:#20badb;"><object width="630" height="300" data="https://www.youtube.com/embed/LDjo9MRcyFo"></object> </div>
+</div>
+
+<html>
+<body>
